--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  {# <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
   <script src="lib/wow/wow.min.js"></script>
   <script src="lib/waypoints/waypoints.min.js"></script>
   <script src="lib/superfish/hoverIntent.js"></script>
-  <script src="lib/superfish/superfish.min.js"></script> #}
+  <script src="lib/superfish/superfish.min.js"></script>
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMkRWurKy1jANbc7yQPQMGe0YPgxg0kSk&callback=initMap">
   </script>
