--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
     crossorigin="anonymous">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="lib/colorbox.css" />
+  <link rel="stylesheet" href="lib/colorbox/colorbox.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="lib/colorbox/jquery.colorbox-min.js"></script>
   <!-- Main Stylesheet File -->
