--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 			$(document).ready(function(){
 				//Examples of how to assign the Colorbox event to elements
 				$(".img-group").colorbox({rel:'img-group',scalePhotos: true,
-            maxWidth: '100%'});
+            maxWidth: '90%', maxHeight:'90%'});
 				$(".callbacks").colorbox({
 					onOpen:function(){ alert('onOpen: colorbox is about to open'); },
 					onLoad:function(){ alert('onLoad: colorbox has started to load the targeted content'); },
