--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <p class="cta-text"> Don't forget to let us know if you can join us! Kindly respond by April 21th, 2018</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="https://goo.gl/forms/D78iKlbufmh2uiL33">Go Go Now</a>
+            <a class="cta-btn align-middle" href="https://goo.gl/forms/D78iKlbufmh2uiL33">Save your place</a>
           </div>
         </div>
 
