--- a/index.html
+++ b/index.html
@@ -448,9 +448,18 @@
   <script src="lib/superfish/superfish.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMkRWurKy1jANbc7yQPQMGe0YPgxg0kSk&callback=initMap">
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51957988-9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-51957988-9');
+  </script>
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+
 </body>
 
 </html>
