--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
           <li>
             <a href="#portfolio">Our Story</a>
           </li>
-          <li>
+          <!-- <li>
             <a href="#rsvp">RSVP</a>
-          </li>
+          </li> -->
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -185,11 +185,11 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Let's Party</h3>
-            <p class="cta-text"> Don't forget to let us know if you can join us! Kindly respond by April 21th, 2018</p>
+            <!-- <p class="cta-text"> Let's make </p> -->
           </div>
-          <div class="col-lg-3 cta-btn-container text-center">
+          <!-- <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="https://goo.gl/forms/D78iKlbufmh2uiL33">Save your place</a>
-          </div>
+          </div> -->
         </div>
 
       </div>
@@ -389,7 +389,7 @@
     <!--==========================
       Team Section
     ============================-->
-    <section id="rsvp">
+    <!-- <section id="rsvp">
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">ARE YOU COMING?</h3>
@@ -400,7 +400,7 @@
         </div>
       </div>
       <p class="section-description"></p>
-    </section>
+    </section> -->
     <!-- #team -->
   </main>
   <a href="#" class="back-to-top">
